// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskColoring renders correctly for nutrition module 1`] = `
<span
  className="badge m-1"
  key="RiskColoring-growth_status"
  style={
    Object {
      "backgroundColor": "#ff6361",
    }
  }
>
  <div>
    <p>
      Stunting
    </p>
  </div>
</span>
`;

exports[`RiskColoring renders correctly for nutrition module 2`] = `
<span
  className="badge m-1"
  key="RiskColoring-nutrition_status"
  style={
    Object {
      "backgroundColor": "#58508d",
    }
  }
>
  <div>
    <p>
      Overweight
    </p>
  </div>
</span>
`;
